package core;
public class ZoneManager { /* optional später ebenfalls als Singleton */ }
