package hmi;
public class HmiInput { /* TODO */ }
